--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^10.0.5",
     "serve": "^14.2.1",
     "web-vitals": "^2.1.4"
   },
