--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.5",
     "serve": "^14.2.1",
