Add OAuth client Id to application env variable

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_BASE_URL=http://localhost:5110
+REACT_APP_CLIENT_ID=922646995997-cvnpmcljlas2ns7052qrr5ogqqubhuol.apps.googleusercontent.com
